error fixed of creating route

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -15,7 +15,7 @@
         <br></br>
         <input placeholder="enter pruice" name="listing[price]" type="number">
         <br></br>
-        <input placeholder="enter loaction " name="listing[loaction]" type="text">
+        <input placeholder="enter loaction " name="listing[location]" type="text">
 
         <br></br>
         <input placeholder="enter country" name="listing[country]" type="text">
